thêm level và chế độ vô hạn