@@ -1,4 +1,4 @@
-package com.mygame.mygamearkanoid;
+package org.example.demo;
 import java.util.List;
 import java.util.ArrayList;
 
@@ -16,12 +16,13 @@ public class GameManager {
     public int lives;
     public String gameState; // trang thái game
 
+    // --- TÍNH NĂNG MỚI ---
+    public int currentLevel;
+    public String gameMode; // "Standard" hoặc "Endless"
+    // ---------------------
+
     public List<PowerUp> fallingPowerUps = new ArrayList<>();
-    // các power-up đang được áp dụng
-
     public List<PowerUp> activeEffects = new ArrayList<>();
-
-    // đếm thời gian
     public long effectStartTime = 0;
 
     public static final int PADDLE_WIDTH_DEFAULT = 100;
@@ -31,7 +32,11 @@ public class GameManager {
         this.bricks = new ArrayList<>();
         this.score = 0;
         this.lives = 3;
-        this.gameState = "Đang chơi"; // trạng thái đang  chs game
+        this.gameState = "Đang chơi";
+        // --- TÍNH NĂNG MỚI ---
+        this.currentLevel = 1;
+        this.gameMode = "Standard"; // Mặc định
+        // ---------------------
     }
 
     public void startGame() {
@@ -39,26 +44,27 @@ public class GameManager {
     }
 
     public void updateGame() {
-        // chưa cập nhật
-
         if (lives <= 0) {
-            gameOver(); // thuaaaaa
+            gameOver();
         }
     }
 
 
     public void gameOver() {
-        gameState = "Thua"; // sau khi thua đổi trạng thái
+        gameState = "Thua";
         System.out.println("Final score: " + score);
     }
 
-    // ========== HÀM MỚI: SAVE GAME ==========
     public void saveGame(String filename) throws IOException {
         GameSave data = new GameSave();
 
         // 1. Lưu state chung
         data.score = this.score;
         data.lives = this.lives;
+        // --- TÍNH NĂNG MỚI ---
+        data.currentLevel = this.currentLevel;
+        data.gameMode = this.gameMode;
+        // ---------------------
 
         // 2. Lưu Paddle
         data.paddleX = this.paddle.x;
@@ -78,7 +84,7 @@ public class GameManager {
 
         // 5. Lưu Active Power-up
         if (!this.activeEffects.isEmpty()) {
-            PowerUp effect = this.activeEffects.getFirst();
+            PowerUp effect = this.activeEffects.get(0); // Sửa lỗi getFirst()
             long elapsedTime = System.currentTimeMillis() - this.effectStartTime;
             long timeRemaining = effect.getDuration() - elapsedTime;
 
@@ -94,8 +100,7 @@ public class GameManager {
         }
     }
 
-    // ========== HÀM MỚI: LOAD GAME ==========
-    // ========== HÀM MỚI: LOAD GAME (ĐÃ SỬA LỖI) ==========
+
     public void loadGame(String filename) throws IOException, ClassNotFoundException {
         GameSave save;
 
@@ -107,52 +112,51 @@ public class GameManager {
         // 2. Khôi phục state chung
         this.score = save.score;
         this.lives = save.lives;
-        this.gameState = "Đang chơi"; // Đảm bảo game ở trạng thái chơi
+        this.gameState = "Đang chơi";
+        // --- TÍNH NĂNG MỚI ---
+        this.currentLevel = save.currentLevel;
+        this.gameMode = save.gameMode;
+        // Nếu file save cũ không có gameMode, đặt mặc định
+        if (this.gameMode == null) {
+            this.gameMode = "Standard";
+        }
+        // ---------------------
 
-        // 3. Khôi phục Paddle (SỬA LỖI: Kiểm tra null và khởi tạo)
+
+        // 3. Khôi phục Paddle
         if (this.paddle == null) {
-            // Chúng ta phải tạo paddle mới với các giá trị từ file save
-            // Các giá trị y, height, speed lấy từ hàm setupGameObjects
-            double paddleY = 750 - 20 - 50; // (SCREEN_HEIGHT - paddleHeight - 50)
+            double paddleY = 750 - 20 - 50;
             int paddleHeight = 20;
             double paddleSpeed = 100;
             this.paddle = new Paddle(save.paddleX, paddleY, save.paddleWidth, paddleHeight, paddleSpeed);
         } else {
-            // Nếu paddle đã tồn tại (trường hợp hiếm), chỉ cần set
             this.paddle.setX(save.paddleX);
             this.paddle.setWidth(save.paddleWidth);
         }
 
-        // 4. Khôi phục Ball (SỬA LỖI: Kiểm tra null và khởi tạo)
+        // 4. Khôi phục Ball
         if (this.ball == null) {
-            // Tạo bóng mới với các giá trị từ file save
-            // Các giá trị width, height, speed, radius lấy từ hàm setupGameObjects
             int ballRadius = 10;
             int ballSize = ballRadius * 2;
             double ballSpeed = 5.0;
             this.ball = new Ball(save.ballX, save.ballY, ballSize, ballSize, ballSpeed,
                     save.ballDirectionX, save.ballDirectionY, ballRadius);
         } else {
-            // Nếu bóng đã tồn tại, chỉ cần set
             this.ball.setX(save.ballX);
             this.ball.setY(save.ballY);
             this.ball.directionX = save.ballDirectionX;
             this.ball.directionY = save.ballDirectionY;
         }
 
-        // Cập nhật các giá trị còn lại cho bóng
         this.ball.alive = save.ballAlive;
-        this.ball.updateVelocity(); // Rất quan trọng: cập nhật dx, dy!
+        this.ball.updateVelocity();
 
         // 5. Khôi phục Bricks
         this.bricks.clear();
         for (BrickSave bd : save.bricks) {
-            // Tạo lại gạch từ dữ liệu đã lưu
             Brick b = new Brick(bd.x, bd.y, bd.width, bd.height, bd.type);
-
-            // Điều chỉnh hitPoints (vì constructor mặc định là 1 hoặc 2)
             if (bd.type.equals("2normal") && bd.hitPoints == 1) {
-                b.takeHit(); // Đánh 1 hit để nó trở về 1 máu
+                b.takeHit();
             }
             this.bricks.add(b);
         }
@@ -163,23 +167,16 @@ public class GameManager {
         if (save.activeEffect != null) {
             PowerUp newEffect = null;
 
-            // Tạo lại đối tượng PowerUp dựa trên type
             if (save.activeEffect.type.equals("expand")) {
-                newEffect = new ExpandPaddlePowerUp(0, 0); // X, Y không quan trọng
+                newEffect = new ExpandPaddlePowerUp(0, 0);
             }
-            // (Thêm các else if cho các loại power-up khác nếu có)
 
             if (newEffect != null) {
-                // Áp dụng lại hiệu ứng
                 newEffect.applyEffect(this.paddle, this.ball);
                 this.activeEffects.add(newEffect);
-
-                // Đặt thời gian bắt đầu "ảo" trong quá khứ
-                // để nó hết hạn đúng lúc
                 long duration = newEffect.getDuration();
                 this.effectStartTime = System.currentTimeMillis() - (duration - save.activeEffect.time);
             }
         }
     }
 }
-
